<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    
    <TextView
        android:id="@+id/bluetoothServerAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_activity_bluetooth" />

    <LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
        android:orientation="horizontal">
        
	    <Button
	        android:id="@+id/refreshButton"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:onClick="refreshButton"
	        android:text="@string/refreshStr" />
	
	    <Button
	        android:id="@+id/startServerButton"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:onClick="startServerButton"
	        android:text="@string/startServerStr" />

	    <Button
	        android:id="@+id/stopServerButton"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:onClick="stopServerButton"
	        android:text="@string/stopServerStr" />
	    
	    <Button
	        android:id="@+id/stopClientButton"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:onClick="stopClientButton"
	        android:text="@string/stopClientStr" />
	    
	</LinearLayout>

    <LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
	        android:id="@+id/clientMessage"
	        android:layout_weight="1"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:hint="@string/messageHint" />
	
	    <Button
	        android:id="@+id/sendMessageButton"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:onClick="sendMessageButton"
	        android:text="@string/sendMessageStr" />

	</LinearLayout>

    <TextView
	    android:id="@+id/status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:text="@string/connectToServerStr" />
    
    <ListView
        android:id="@+id/deviceList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
    </ListView>
    
</LinearLayout>