<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:stretchColumns="1"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.jardenconsulting.androidcourse.LayoutsActivity" >
    
    <TableRow>
	    <TextView
	        android:text="@string/typeStr"
	        android:paddingRight="40dp" />
	    <EditText
	        android:id="@+id/layoutType" />
    </TableRow>

    <TableRow>
	    <TextView
	        android:text="@string/fileStr" />
	    <EditText
	        android:id="@+id/layoutFile" />
    </TableRow>

    <TableRow>
	    <TextView
	        android:text="@string/idStr" />
	    <EditText
	        android:id="@+id/layoutId" />
    </TableRow>
    
    <TableRow>
        <LinearLayout
        android:layout_span="2"
        android:orientation="horizontal" >
	        <Button android:id="@+id/linear"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
	            android:text="@string/linearStr" />     
	        <Button android:id="@+id/relative"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
	            android:text="@string/relativeStr" />
	        <Button android:id="@+id/table"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
	            android:text="@string/tableStr" />
        </LinearLayout>     
    </TableRow>

</TableLayout>
