<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.jardenconsulting.androidcourse.MainActivity" >
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/greetingView"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/greeting" />
        
        <TextView
            android:id="@+id/createCount"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content" />
        
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
    
		<Button
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:onClick="threadButton"
	        android:text="@string/threads" />
        <Button
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:onClick="threadButton2"
	        android:text="@string/threads2" />
        <TextView
            android:id="@+id/threadView"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content" />
        
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <EditText
	        android:id="@+id/editMessage"
	        android:layout_weight="1"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:hint="@string/messageHint" />
	
	    <Button
	        android:id="@+id/goButton"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:onClick="goButton"
	        android:text="@string/go" />
	    <Button
	        android:id="@+id/connectButton"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:onClick="connectButton"
	        android:text="@string/connect" />
	    
	</LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <EditText
            android:id="@+id/phoneEdit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:text="@string/myPhoneNo"
            android:inputType="phone" />

        <Button
            android:id="@+id/phoneButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="phoneButton"
            android:text="@string/phoneStr" />

    </LinearLayout>

    <fragment
        android:id="@+id/contacts_fragment"
        android:name="jarden.ContactsFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:layout="@layout/contacts_fragment" />

    <ListView
        android:id="@+id/activityList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
    </ListView>

</LinearLayout>