<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.jardenconsulting.androidcourse.LayoutsActivity" >
    
	<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        
        <TextView
            android:layout_width="0dp"
            android:layout_weight="2"
        	android:layout_height="wrap_content"
	        android:text="@string/typeStr" />
	    <EditText
            android:layout_width="0dp"
            android:layout_weight="3"
        	android:layout_height="wrap_content"
        	android:hint="@string/typeStr"
	        android:id="@+id/layoutType" />
    </LinearLayout>

	<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        
        <TextView
            android:layout_width="0dp"
            android:layout_weight="2"
        	android:layout_height="wrap_content"
	        android:text="@string/fileStr" />
	    <EditText
            android:layout_width="0dp"
            android:layout_weight="3"
        	android:layout_height="wrap_content"
        	android:hint="@string/fileStr"
	        android:id="@+id/layoutFile" />
    </LinearLayout>

	<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        
        <TextView
            android:layout_width="0dp"
            android:layout_weight="2"
        	android:layout_height="wrap_content"
	        android:text="@string/idStr" />
	    <EditText
            android:layout_width="0dp"
            android:layout_weight="3"
        	android:layout_height="wrap_content"
        	android:hint="@string/idStr"
	        android:id="@+id/layoutId" />
    </LinearLayout>
    
	<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
	    
		<Button android:id="@+id/linear"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/linearStr" />     
		<Button android:id="@+id/relative"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/relativeStr" />     
		<Button android:id="@+id/table"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/tableStr" />     
	</LinearLayout>
			
</LinearLayout>
