<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="jarden.ContactsFragment" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

	    <EditText
		    android:id="@+id/contactName"
		    android:hint="@string/contactName"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content" />

	    <EditText
	        android:id="@+id/contactNumber"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:hint="@string/contactNumber"
	        android:inputType="phone" />

		<Button
		    android:id="@+id/newContactButton"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/newContact" />
		
	</LinearLayout>  
	  
	<TableLayout
	    android:id="@+id/contactTable"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content" >
	</TableLayout>
	
</LinearLayout>
