<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.jardenconsulting.androidcourse.QuizActivity" >
    
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        
	    <TextView
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:text="@string/levelStr" />

	    <TextView
	        android:id="@+id/level"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:width="0dp" />

	    <Spinner
	        android:id="@+id/quizTypeSpinner"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="4" />
        
    </LinearLayout>
        
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        
	    <TextView
	        android:id="@+id/question"
	        android:layout_width="0dp"
	        android:layout_weight="1"
	        android:layout_height="wrap_content" />

	    <EditText
	        android:id="@+id/answer"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:ems="10"
	        android:hint="@string/yourAnswerStr"
	        android:inputType="text" >

	        <requestFocus />
	    </EditText>
        
    </LinearLayout>

    <Button
        android:id="@+id/buttonGo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/go" />
	    
    <TextView
        android:id="@+id/result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    
</LinearLayout>